objects/AcctSeed__Billing__c.object
<CustomObject>
    <description>Used to document products or services related sales to a customer.</description>
    <fields>
        <fullName>AcctSeedERP__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>AcctSeedERP__Sales_Order__c</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to specify accounting period for financial reporting. Accounting period must have a value of &quot;Open&quot; in order to be selected.</inlineHelpText>
        <label>Accounting  Period</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Period__c.AcctSeed__Status__c</field>
                <operation>equals</operation>
                <value>Open</value>
            </filterItems>
            <infoMessage>The accounting period status must be open</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Project_Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Year__c</fullName>
        <formula>LEFT(  AcctSeed__Accounting_Period__r.Name  ,4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accounting Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Age__c</fullName>
        <formula>IF(AND(TODAY() - AcctSeed__Due_Date2__c &lt;= 0,(ROUND(AcctSeed__Balance__c, 2) &gt; 0)), &quot;0-Current&quot;,
IF(AND(30 &gt;= TODAY() - AcctSeed__Due_Date2__c, TODAY() - AcctSeed__Due_Date2__c &gt; 0, (ROUND(AcctSeed__Balance__c, 2) &gt; 0)), &quot;1-30 Days&quot;,
IF(AND(60 &gt;= TODAY() - AcctSeed__Due_Date2__c, TODAY() - AcctSeed__Due_Date2__c &gt; 0, (ROUND(AcctSeed__Balance__c, 2) &gt; 0)), &quot;31-60 Days&quot;,
IF(AND(90 &gt;= TODAY() - AcctSeed__Due_Date2__c, TODAY() - AcctSeed__Due_Date2__c &gt; 0, (ROUND(AcctSeed__Balance__c, 2) &gt; 0)), &quot;61-90 Days&quot;,
IF(AND(TODAY() - AcctSeed__Due_Date2__c &gt; 90, (ROUND(AcctSeed__Balance__c, 2) &gt; 0)), &quot;Over 90 Days&quot;,
IF(AND(ROUND(AcctSeed__Balance__c, 2) = 0, TEXT(AcctSeed__Status__c) = &quot;Posted&quot;), &quot;Closed&quot;,
&quot;&quot;))))))</formula>
        <inlineHelpText>Age of the Billing, based on the due date
Used in Aging Reports</inlineHelpText>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Balance__c</fullName>
        <formula>AcctSeed__Total__c - AcctSeed__Received_Amount__c - AcctSeed__Cash_Application_Adjustment_Amount__c - AcctSeed__Credit_Memo_Applied_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total of Billing minus amount Received.</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Cash_Receipt_Count__c</fullName>
        <label>Billing Cash Receipt Count</label>
        <summaryForeignKey>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Billing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Comment__c</fullName>
        <inlineHelpText>A comment which is included on the pdf invoice generated for the customer.</inlineHelpText>
        <label>Billing Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Cycle_End_Date__c</fullName>
        <inlineHelpText>Used Primarily in Time &amp; Material Billings. Used to show range in which products or services were sold.</inlineHelpText>
        <label>Billing Cycle End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Cycle_Start_Date__c</fullName>
        <inlineHelpText>Used Primarily in Time &amp; Material Billings. Used to show range in which products or services were sold.</inlineHelpText>
        <label>Billing Cycle Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to configure formatting and display of fields in Billing PDF.</inlineHelpText>
        <label>Billing Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Billing</value>
            </filterItems>
            <infoMessage>The type on the PDF Format must be Billing</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Project_Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_PostalCode__c</fullName>
        <label>Billing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_State__c</fullName>
        <label>Billing State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Terms_Name__c</fullName>
        <inlineHelpText>The name of the billing terms as you would like them to appear on the invoice.</inlineHelpText>
        <label>Billing Terms Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cash_Application_Adjustment_Amount__c</fullName>
        <inlineHelpText>The amount adjusted for payment discount or small balance write off in the process of cash receipt and application.</inlineHelpText>
        <label>Cash Application Adjustment Amount</label>
        <summarizedField>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Adjustment_Amount__c</summarizedField>
        <summaryForeignKey>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Billing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Closed_Accounting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The accounting period in which the billing reached a zero balance. Used in generating billing aging history records. This field should never be manually updated.</inlineHelpText>
        <label>Closed Accounting  Period</label>
        <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
        <relationshipLabel>Billings (Closed Accounting  Period)</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Contract_PO_Number__c</fullName>
        <formula>&quot;Deprecated&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a deprecated PO Number. Please use the &quot;PO Number Field&quot;</inlineHelpText>
        <label>zDep-Contract/PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Credit_Memo_Applied_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The amount applied to this billing from credit memos.</inlineHelpText>
        <label>Credit Memo Applied Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Currency_Conversion_Rate__c</fullName>
        <inlineHelpText>The currency conversion rate for the currency.</inlineHelpText>
        <label>Currency Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The organization you would like to pay you for your product or service. This is a filtered lookup to the Account where Accounting Status equals &quot;Customer&quot; or &quot;Customer &amp; Vendor&quot;.</inlineHelpText>
        <label>Customer</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.AcctSeed__Accounting_Type__c</field>
                <operation>contains</operation>
                <value>Customer, Customer and Vendor</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Date the Billing is issued to the customer.</inlineHelpText>
        <label>Billing Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Amount__c</fullName>
        <formula>AcctSeed__Discount_Percent__c * AcctSeed__Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in the calculation of payment discounts. The discount amount represents the amount of money you will forgive in the cash receipt process if the invoice is paid within the discount days due.</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Due_Date__c</fullName>
        <inlineHelpText>Used in the calculation of payment terms. The number of days due from the issue date if the customer is to receive a payment discount.</inlineHelpText>
        <label>Discount Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Percent__c</fullName>
        <inlineHelpText>The percent discount rewarded to a customer off the total of the invoice for payment within the discount days due.</inlineHelpText>
        <label>Discount %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Due_Date2__c</fullName>
        <inlineHelpText>The Due Date equals the Billing Date plus the Billing Days Due on the associated Account (Customer) record. Otherwise the Due Date defaults to the Billing Date.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Due_Date__c</fullName>
        <formula>IF(!ISBLANK(AcctSeed__Due_Date2__c), AcctSeed__Due_Date2__c, AcctSeed__Date__c + AcctSeed__Billing_Format__r.AcctSeed__Billing_Days_Offset__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Payment Terms for billings are set in the Billing Format Object. The payment terms equal the Billing Date plus the Billing Days offset in the Billing Format.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger_Amount__c</fullName>
        <formula>IF(ISBLANK(AcctSeed__Currency_Conversion_Rate__c) || AcctSeed__Currency_Conversion_Rate__c = 0,AcctSeed__Total__c,AcctSeed__Total__c/AcctSeed__Currency_Conversion_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total normalized to the base currency. This is Total divided by the Currency Conversion Rate.</inlineHelpText>
        <label>Ledger Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Line_Count__c</fullName>
        <inlineHelpText>Number of billing lines associated with this record.</inlineHelpText>
        <label>Line Count</label>
        <summaryForeignKey>AcctSeed__Billing_Line__c.AcctSeed__Billing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__PDF_Email_Status__c</fullName>
        <label>PDF Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Unsent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__PO_Number__c</fullName>
        <inlineHelpText>Purchase Order Number.</inlineHelpText>
        <label>PO Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payment_Link__c</fullName>
        <label>Payment Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Proprietary_Billing_Number__c</fullName>
        <inlineHelpText>For use when you feel salesforce&apos;s auto number will not be adequate for your organization&apos;s needs. Can be used for legacy Billings for loading history as well.</inlineHelpText>
        <label>Proprietary Billing Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Received_Amount__c</fullName>
        <inlineHelpText>Indicates the amount applied on this particular billing.</inlineHelpText>
        <label>Received Amount</label>
        <summarizedField>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Applied_Amount__c</summarizedField>
        <summaryForeignKey>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Billing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Recurring_Billing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Billing</label>
        <referenceTo>AcctSeed__Recurring_Billing__c</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Sales_Tax2__c</fullName>
        <description>Total Sales Tax amount</description>
        <inlineHelpText>Total Sales Tax amount</inlineHelpText>
        <label>Sales Tax</label>
        <summarizedField>AcctSeed__Billing_Line__c.AcctSeed__Total__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Billing_Line__c.AcctSeed__Tax_Line__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Billing_Line__c.AcctSeed__Billing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Sales_Tax3__c</fullName>
        <description>Summary of the Billing Lines&apos; Tax Amount fields</description>
        <inlineHelpText>Summary of the Billing Lines&apos; Tax Amount fields</inlineHelpText>
        <label>Sales Tax</label>
        <summarizedField>AcctSeed__Billing_Line__c.AcctSeed__Tax_Amount2__c</summarizedField>
        <summaryForeignKey>AcctSeed__Billing_Line__c.AcctSeed__Billing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Billings (Shipping Contact)</relationshipLabel>
        <relationshipName>Billings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Shipping_PostalCode__c</fullName>
        <label>Shipping Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <inlineHelpText>Used in approvals of billing records and therefore related detail lines. A value of &quot;Posted&quot; indicates the record is final and a debit and credit line have been entered into the transaction object for each billing line.</inlineHelpText>
        <label>Posting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>New- No AP</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                    <default>true</default>
                    <label>In Process</label>
                </value>
                <value>
                    <fullName>Waiting for Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Sub_Total__c</fullName>
        <formula>AcctSeed__Total__c - AcctSeed__Sales_Tax2__c - AcctSeed__Sales_Tax3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Summary of all the Billing Lines&apos; Sub-Total fields</inlineHelpText>
        <label>Sub-Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax__c</fullName>
        <description>Deprecated in version 1.17</description>
        <inlineHelpText>Deprecated in version 1.17</inlineHelpText>
        <label>zDep-Tax</label>
        <summarizedField>AcctSeed__Billing_Line__c.AcctSeed__Tax_Amount__c</summarizedField>
        <summaryForeignKey>AcctSeed__Billing_Line__c.AcctSeed__Billing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Total__c</fullName>
        <inlineHelpText>Grand Total for Billing.</inlineHelpText>
        <label>Total</label>
        <summarizedField>AcctSeed__Billing_Line__c.AcctSeed__Total__c</summarizedField>
        <summaryForeignKey>AcctSeed__Billing_Line__c.AcctSeed__Billing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Type__c</fullName>
        <formula>IF(AcctSeed__Total__c &lt; 0, &apos;Credit Memo&apos;,&apos;Invoice&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Type of Billing- either Invoice or Credit Memo
If Total &gt;0 = Invoice
If Total &lt;0 = Credit Memo</inlineHelpText>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__VAT_Line_Count__c</fullName>
        <inlineHelpText>Count of billing lines that are marked as Is VAT Related = true</inlineHelpText>
        <label>VAT Line Count</label>
        <summaryFilterItems>
            <field>AcctSeed__Billing_Line__c.AcctSeed__Is_VAT_Related__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Billing_Line__c.AcctSeed__Billing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <inlineHelpText>Customer Invoice number</inlineHelpText>
        <label>Application Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__Avalara_Status__c</fullName>
        <description>Avalara Status field to check billing status with Avalara dashboard</description>
        <inlineHelpText>Not Current = Billing Not Saved to Avalara Dashboard
Modified = Billing Saved but not in sync with Avalara Dashboard 
Current = Billing Saved to Avalara Dashboard</inlineHelpText>
        <label>Avalara Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__Bi_Billing_Address_Latitude__c</fullName>
        <description>Billing Address Latitude field on Billing page</description>
        <inlineHelpText>Latitude details for Avalara Tax Calculation.</inlineHelpText>
        <label>Billing Address Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__Bi_Billing_Address_Longitude__c</fullName>
        <description>Billing Address Longitude field on Billing page</description>
        <inlineHelpText>Longitude details for Tax Calculation</inlineHelpText>
        <label>Billing Address Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__Bi_Shipping_Address_Latitude__c</fullName>
        <description>Shipping Address Latitude field on Billing page</description>
        <inlineHelpText>Latitude details for Avalara Tax Calculation.</inlineHelpText>
        <label>Shipping Address Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__Bi_Shipping_Address_Longitude__c</fullName>
        <description>Shipping Address Longitude field on Billing page</description>
        <inlineHelpText>Longitude details for Avalara Tax Calculation.</inlineHelpText>
        <label>Shipping Address Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__Invoice_Messaging__c</fullName>
        <label>Invoice Messaging</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__Sales_Tax_Amount__c</fullName>
        <description>Avalara Sales Tax Field</description>
        <inlineHelpText>Avalara Sales Tax Amount</inlineHelpText>
        <label>Sales Tax</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BS_Due_Date__c</fullName>
        <description>Exact copy of field AcctSeed__Due_Date__c.</description>
        <formula>IF(!ISBLANK(AcctSeed__Due_Date2__c), AcctSeed__Due_Date2__c, AcctSeed__Date__c + AcctSeed__Billing_Format__r.AcctSeed__Billing_Days_Offset__c)</formula>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Amount_and_Total_Match__c</fullName>
        <formula>IF( PAyment_Due__c &lt;&gt;  AcctSeed__Total__c  , &quot;No&quot;, &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Looks to see if the Payment Due field and the Total fields match. A Yes is required to submit for approval.</inlineHelpText>
        <label>Billing Amount and Total Match?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConReqGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Con Req Group</label>
        <referenceTo>Con_Req_Group__c</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CostDay__c</fullName>
        <formula>AcctSeed__Total__c/(AcctSeed__Recurring_Billing__r.CurrentPeriodEndDate__c-AcctSeed__Recurring_Billing__r.CurrentPeriodStartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost/Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Invoicing_Information__c</fullName>
        <description>This field is used in BillingsevicePDF</description>
        <label>Customer Invoicing Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Reference_Number__c</fullName>
        <description>Optional Customer Reference or Customer PO number to assist customers in locating POs or Payment Authorizations for Borrego Invoices</description>
        <inlineHelpText>Optional Customer Reference or Customer PO number to assist customers in locating POs or Payment Authorizations for Borrego Invoices</inlineHelpText>
        <label>Customer Reference Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Comment__c</fullName>
        <inlineHelpText>need help bubble notes?</inlineHelpText>
        <label>Executive Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Future_Accounting_Period__c</fullName>
        <description>Used to label Billings that are created in advance and need to be filtered out in Monthly Statements Conga query.</description>
        <formula>IF(AcctSeed__Accounting_Period__r.AcctSeed__Start_Date__c &gt; Today(), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to label Billings that are created in advance and need to be filtered out in Monthly Statements Conga query.</inlineHelpText>
        <label>Future Accounting Period?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludeInMonthlyStatement__c</fullName>
        <label>Include In Monthly Statement</label>
        <summaryFilterItems>
            <field>AcctSeed__Billing_Line__c.AcctSeed__Revenue_GL_Account__c</field>
            <operation>equals</operation>
            <value>a1m80000000p2l1,a1m80000000p2kk, a1m80000000p2ir,a1m80000000p2kE, a1m80000000p2ki, a1m80000000p2kB, a1m80000000p2lh, a1m80000000p2iq, a1m80000000p2ke</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Billing_Line__c.AcctSeed__Billing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Internal_Billing_Comments__c</fullName>
        <description>This field will be used to type in information regarding past due billings by accounting team.</description>
        <inlineHelpText>This field will be used to type in information regarding past due billings by accounting team.</inlineHelpText>
        <label>Internal Billing Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mass_Submit_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by process to allow multiple Billings to be submit at once.</description>
        <label>Mass Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Material_presently_stored__c</fullName>
        <label>Material Presently Stored</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAyment_Due__c</fullName>
        <inlineHelpText>Amount Due on the Billing</inlineHelpText>
        <label>Payment Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Period_To__c</fullName>
        <inlineHelpText>End of the Billing Cycle</inlineHelpText>
        <label>Period To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>used with RH for monthly statements</description>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteType__c</fullName>
        <description>used to filter billing types</description>
        <formula>IF(Quote__r.CountofMow__c&gt;=1, &quot;Mows/Wash&quot;, 
IF(AND(Quote__r.CountofInternalLabor__c&gt;=1, Quote__r.Countofnoninternal__c=0), &quot;Internal Labor Only&quot;,
IF(NOT(ISBLANK(AcctSeed__Recurring_Billing__c)), &quot;Service Contract&quot;,

&quot;N/A&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring_Billing_Format_ID__c</fullName>
        <formula>AcctSeed__Recurring_Billing__r.Billing_Format__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Billing Format ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesTaxDollars__c</fullName>
        <formula>IF(LEN(AvaAcctSeed__Sales_Tax_Amount__c)=2, 
VALUE(Right(AvaAcctSeed__Sales_Tax_Amount__c, 1)), 

IF(LEN(AvaAcctSeed__Sales_Tax_Amount__c)=3, 
VALUE(RIGHT(AvaAcctSeed__Sales_Tax_Amount__c, 2)), 

IF(LEN(AvaAcctSeed__Sales_Tax_Amount__c)=4, 
VALUE(RIGHT(AvaAcctSeed__Sales_Tax_Amount__c, 3)), 


IF(LEN(AvaAcctSeed__Sales_Tax_Amount__c)=5, 
VALUE(RIGHT(AvaAcctSeed__Sales_Tax_Amount__c, 4)), 

IF(LEN(AvaAcctSeed__Sales_Tax_Amount__c)=5, 
VALUE(RIGHT(AvaAcctSeed__Sales_Tax_Amount__c, 4)), 

IF(LEN(AvaAcctSeed__Sales_Tax_Amount__c)=6, 
VALUE(RIGHT(AvaAcctSeed__Sales_Tax_Amount__c, 5)), 

IF(LEN(AvaAcctSeed__Sales_Tax_Amount__c)=7, 
VALUE(RIGHT(AvaAcctSeed__Sales_Tax_Amount__c, 6)), 

IF(LEN(AvaAcctSeed__Sales_Tax_Amount__c)=8, 
VALUE(RIGHT(AvaAcctSeed__Sales_Tax_Amount__c, 7)), 
0))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Tax Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesTaxPercent__c</fullName>
        <description>sales tax percent used on billing printout for O&amp;M</description>
        <label>Sales Tax Percent</label>
        <summarizedField>AcctSeed__Billing_Line__c.SalesTaxRateFormula__c</summarizedField>
        <summaryForeignKey>AcctSeed__Billing_Line__c.AcctSeed__Billing__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to Service Contract</inlineHelpText>
        <label>Service Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SolarFund__c</fullName>
        <formula>Service_Contract__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solar Fund</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubTotal__c</fullName>
        <formula>AcctSeed__Total__c-SalesTaxDollars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>